fixed alignment and spacing

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <canvas id="canvas"></canvas>
     <h1 id="blog"><a href="blog.xian.codes">blog</a><h1>
     <h1 id="photos"><a href="photos.xian.codes">photos</a></h1>
-    <h1 id="code"><a href="code.xian.codes">code</a></h1>
-    <h1 id="name">Christian Russo</h1>
+    <div id="codeContainer">
+      <h1 id="code"><a href="code.xian.codes">code</a></h1>
+    </div>
+    <div id="nameContainer">
+      <h1 id="name">Christian Russo</h1>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
