--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="main.css"/>
     <script src="three.min.js"></script>
+    <script src="DeviceOrientationControls.js"></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
