reverted back to no dvice orientation controls

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" type="text/css" href="main.css"/>
     <script src="three.min.js"></script>
-    <script src="DeviceOrientationControls.js"></script>
+    <script type="module" src="three.module.js"></script>
+    <script type="module" src="DeviceOrientationControls.js"></script>
   </head>
   <body>
     <canvas id="canvas"></canvas>
@@ -16,6 +17,6 @@
     <div id="nameContainer">
       <h1 id="name">Christian Russo</h1>
     </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
